Fix overflow issues on root div grid

--- a/readycss-website/src/scss/_app.scss
+++ b/readycss-website/src/scss/_app.scss
@@ -1,6 +1,7 @@
 #app {
   display: grid;
-  height: 100dvh;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: 100dvh;
   grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
 }
